--- a/add_song.html
+++ b/add_song.html
@@ -7,9 +7,9 @@
     <script src="scripts/add_song.js" defer></script>
 </head>
 <body>
-    <nav>
-        <a href="/frontend.html">All Songs</a>
-        <a hred="/add_song.html">Add Song</a>
+   <nav>
+        <a href="/index.html">All Songs</a>
+        <a href="/add_song.html">Add Song</a>
     </nav>
     <h1>Add songs</h1>
     <form>
