--- a/details.html
+++ b/details.html
@@ -7,8 +7,8 @@
     <script src="scripts/details.js" defer></script>
 </head>
 <body>
-    <nav>
-        <a href="/frontend.html">All Songs</a>
+     <nav>
+        <a href="/index.html">All Songs</a>
         <a href="/add_song.html">Add Song</a>
     </nav>
     <h1></h1>
