--- a/edit.html
+++ b/edit.html
@@ -7,8 +7,8 @@
     <script src="scripts/edit.js" defer></script>
 </head>
 <body>
-    <nav>
-        <a href="/frontend.html">All Songs</a>
+     <nav>
+        <a href="/index.html">All Songs</a>
         <a href="/add_song.html">Add Song</a>
     </nav>
     <form>
