--- a/details.html
+++ b/details.html
@@ -8,9 +8,10 @@
 </head>
 <body>
      <nav>
-        <a href="/index.html">All Songs</a>
-        <a href="/add_song.html">Add Song</a>
+        <a href="index.html">All Songs</a>
+        <a href="add_song.html">Add Song</a>
     </nav>
+    
     <h1></h1>
     <div></div>
    
